# internship_fastsim_pcoe_reviewer_with_deployement

./: .dockerignore  .env.example  .gitignore  CTO_DEPLOYMENT_VALIDATION.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_HANDOFF.md  Dockerfile  EV_Routing_Pipeline_Complete.docx  README.md  TEST_RESULTS.md  battery_drainage_array.json  build_and_test.sh  depletion_check_15pct.json  depletion_test_15pct_result.json  depletion_test_battery_drainage_array.json  depletion_test_panic_point_15pct.json  docker-compose.valhalla.yml  docker-compose.yml  new_delhi_chargers.csv  new_delhi_chargers.json  normalized_new_delhi_chargers.csv  pcoe_battery_capacity_summary.csv  pcoe_charger_integrated_report.json  pcoe_discharge_cycles_summary.csv  pcoe_fastsim_route_scenarios.csv  point_nearest_new_delhi_chargers.csv  pyproject.toml  requirements.txt  route_edges.json  route_edges_charger.json  route_edges_fastsim_result.json  route_nearest_new_delhi_chargers.csv  valhalla.json  vehicles_enrichment_GLOBAL_20260517_0915.csv
.github/workflows/: build_and_test.yaml  deploy-book.yaml  release.yaml
.helix/: languages.toml
app/: __init__.py  main.py
app/confidence/: __init__.py  endpoints.py  schemas.py  service.py
app/physics/: __init__.py  battery.py  cycle_bridge.py  endpoints.py  environment.py  fastsim_bridge.py  schemas.py  simulator.py  valhalla_adapter.py  vehicle_store.py  weather.py
app/routing/: __init__.py  charger_recommendations.py  endpoints.py  multi_stop_planner.py  schemas.py  valhalla_client.py
benchmarks/: f3-save-int-1.py  f3-save-int-none.py
cal_and_val/: f2-validation.py
cal_and_val/f2-vehicles/: 2010 Mazda 3 i-Stop.yaml  2012 Ford Focus.yaml  2012 Ford Fusion.yaml  2016 AUDI A3 4cyl 2WD.yaml  2016 BMW 328d 4cyl 2WD.yaml  2016 BMW i3 REx PHEV.yaml  2016 CHEVROLET Malibu 4cyl 2WD.yaml  2016 CHEVROLET Spark EV.yaml  2016 CHEVROLET Volt.yaml  2016 FORD C-MAX (PHEV).yaml  2016 FORD C-MAX HEV.yaml  2016 FORD Escape 4cyl 2WD.yaml  2016 FORD Explorer 4cyl 2WD.yaml  2016 HYUNDAI Elantra 4cyl 2WD.yaml  2016 HYUNDAI Sonata PHEV.yaml  2016 Hyundai Tucson Fuel Cell.yaml  2016 KIA Optima Hybrid.yaml  2016 Leaf 24 kWh.yaml  2016 MITSUBISHI i-MiEV.yaml  2016 Nissan Leaf 30 kWh.yaml  2016 TESLA Model S60 2WD.yaml  2016 TOYOTA Camry 4cyl 2WD.yaml  2016 TOYOTA Corolla 4cyl 2WD.yaml  2016 TOYOTA Highlander Hybrid.yaml  2016 Toyota Prius Two FWD.yaml  2017 CHEVROLET Bolt.yaml  2017 Maruti Dzire VDI.yaml  2017 Prius Prime.yaml  2017 Toyota Highlander 3.5 L.yaml  2020 Chevrolet Colorado 2WD Diesel.yaml  2020 Hero Splendor+ 100cc.yaml  2020 VW Golf 1.5TSI.yaml  2020 VW Golf 2.0TDI.yaml  2021 BMW iX xDrive40.yaml  2021 Cupra Born.yaml  2021 Fiat Panda Mild Hybrid.yaml  2021 Honda N-Box G.yaml  2021 Peugot 3008.yaml  2022 Ford F-150 Lightning 4WD.yaml  2022 MINI Cooper SE Hardtop 2 door.yaml  (+27 more)
cal_and_val/f3-vehicles/: 2010 Mazda 3 i-Stop.yaml  2012 Ford Focus.yaml  2012 Ford Fusion.yaml  2016 AUDI A3 4cyl 2WD.yaml  2016 BMW 328d 4cyl 2WD.yaml  2016 BMW i3 REx PHEV.yaml  2016 CHEVROLET Malibu 4cyl 2WD.yaml  2016 CHEVROLET Spark EV.yaml  2016 CHEVROLET Volt.yaml  2016 FORD C-MAX (PHEV).yaml  2016 FORD C-MAX HEV.yaml  2016 FORD Escape 4cyl 2WD.yaml  2016 FORD Explorer 4cyl 2WD.yaml  2016 HYUNDAI Elantra 4cyl 2WD.yaml  2016 HYUNDAI Sonata PHEV.yaml  2016 Hyundai Tucson Fuel Cell.yaml  2016 KIA Optima Hybrid.yaml  2016 Leaf 24 kWh.yaml  2016 MITSUBISHI i-MiEV.yaml  2016 Nissan Leaf 30 kWh.yaml  2016 TESLA Model S60 2WD.yaml  2016 TOYOTA Camry 4cyl 2WD.yaml  2016 TOYOTA Corolla 4cyl 2WD.yaml  2016 TOYOTA Highlander Hybrid.yaml  2016 Toyota Prius Two FWD.yaml  2017 CHEVROLET Bolt.yaml  2017 Maruti Dzire VDI.yaml  2017 Prius Prime.yaml  2017 Toyota Highlander 3.5 L.yaml  2020 Chevrolet Colorado 2WD Diesel.yaml  2020 Hero Splendor+ 100cc.yaml  2020 VW Golf 1.5TSI.yaml  (+35 more)
fastsim-cli/: Cargo.toml
fastsim-core/: Cargo.toml  build.rs  test.yaml  test2.yaml
fastsim-core/fastsim-proc-macros/: Cargo.toml
fastsim-core/fastsim-proc-macros/src/: cumu_method_derive.rs  history_vec_derive.rs  pyo3_api.rs  sm_derive.rs
fastsim-core/fastsim-proc-macros/src/serde_api/: serde_utils.rs
fastsim-core/resources/cycles/: hwfet.csv  udds.csv
fastsim-core/resources/interpolators/res/: default_pwr.yaml  default_pwr_and_soc.yaml  default_pwr_and_temp.yaml  default_pwr_soc_and_temp.yaml
fastsim-core/resources/vehicles/: 2012_Ford_Fusion.yaml  2016 Nissan Leaf 30 kWh thrml.yaml  2016_TOYOTA_Prius_Two.yaml  2020 Chevrolet Bolt EV thrml.yaml  2022 Tesla Model 3 RWD thrml.yaml  2022_Renault_Zoe_ZE50_R135.yaml  2026_Chrysler_Pacifica_Select.yaml
fastsim-core/src/: drive_cycle.rs  error.rs  gas_properties.rs  imports.rs  lib.rs  macros.rs  prelude.rs  pyo3.rs  si.rs  traits.rs  uc.rs
fastsim-core/src/drive_cycle/: maneuvers.rs  manipulation_utils.rs
fastsim-core/src/simdrive/: mod.rs  params.rs  roadload.rs
fastsim-core/src/simdrivelabel/: longparams.json  mod.rs
fastsim-core/src/traits/: serde_api.rs
fastsim-core/src/utils/: interp.rs  mod.rs  tracked_state.rs
fastsim-core/src/vehicle/: bev.rs  cabin.rs  chassis.rs  common.rs  conv.rs  fastsim-2_2022_Renault_Zoe_ZE50_R135.yaml  hev.rs  hvac.rs  mod.rs  powertrain_type.rs  traits.rs  vehicle_model.rs
fastsim-core/src/vehicle/hvac/: hvac_sys_for_lumped_cabin.rs  hvac_sys_for_lumped_cabin_and_res.rs  hvac_utils.rs
fastsim-core/src/vehicle/powertrain/: electric_machine.rs  fuel_converter.rs  fuel_storage.rs  mod.rs  prepare_eff_values.py  reversible_energy_storage.rs  traits.rs  transmission.rs
fastsim-core/src/vehicle/vehicle_model/: fastsim2_interface.rs
fastsim-py/: Cargo.toml
nginx/: nginx.conf
nodejs-api/: Dockerfile  package.json
scripts/: production_smoke.py
tests/: conftest.py  test_battery_correction.py  test_charger_recommendations.py  test_confidence_api.py  test_live_routing_endpoint.py  test_multi_stop_planner.py  test_physics_api.py  test_pluginany_integration.py  test_route_edges_charger_integration.py  test_routing_plan_endpoint.py  test_routing_recommend_endpoint.py  test_synthetic_endpoint_smoke.py
valhalla/: README.md
(+21 files in other folders)
