[workspace]

members = [
    "fastsim-core",                     # pure rust core with optional pyo3 feature
    "fastsim-py",                       # python module exposing fastsim-core
    "fastsim-cli",                      # CLI apps
    "fastsim-core/fastsim-proc-macros",
    "fastsim-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.83"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[workspace.dependencies]
document-features = "0.2.10"
fastsim-core = { path = "fastsim-core" }
anyhow = "1.0.71"
pyo3 = "0.23.3"
thiserror = "2.0.11"
uom = { version = "0.35.0", features = ["use_serde"] }
ninterp = { version = "0.7.3", features = ["serde"] }
fastsim-2 = { package = "fastsim-core", version = "0.1.11", features = [
    "pyo3",
    "resources",
] }
lazy_static = "1.4.0"
