[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "fastsim"
version = "3.0.6"
authors = [{ name = "NREL/MTES/CIMS/MBAP Group", email = "fastsim@nrel.gov" }]
description = "Tool for modeling vehicle powertrains"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.10,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "fastapi>=0.136,<1",
    "pandas>=2.1.2, <=2.3.2",
    "polars~=1.4",
    "matplotlib~=3.3",
    "numpy>=1.18, <=2.3.2",
    "seaborn>=0.11.0,<13.2",
    "typing_extensions~=4.12",
    "PyYAML==6.0.2",
    "msgpack==1.1.0",
    "ipykernel~=6.29",
    "executing~=2.0",
    "pip",
    "types-seaborn~=0.13.2",
    "uvicorn>=0.47,<1",
    "openpyxl>=3.1,<4",
    "transformers>=4.41,<5",
    "torch>=2.2,<3",
]

[project.urls]
Homepage = "https://www.nrel.gov/transportation/fastsim.html"

[project.optional-dependencies]
dev = [
    "pylsp-mypy>=0.7.0",
    "pylsp-rope>=0.1.17",
    "ruff>=0.11.9",
    "pytest~=8.3",
    "maturin~=1.8",
    "python-lsp-server~=1.10",
    "memory_profiler~=0.61.0",
    "pymoo~=0.6",
    "plotly~=6.0",
    "deepdiff>=8.4.2",
    "httpx>=0.28,<1",
]

[dependency-groups]
dev = ["fastsim[dev]"]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = [
    "fastsim*",
] # package names should match these glob patterns (["*"] by default)
namespaces = false # to disable scanning PEP 420 namespaces (true by default)

[tool.maturin]
profile = "release"
python-source = "python"
features = ["pyo3/extension-module"]
module-name = "fastsim.fastsim"
manifest-path = "fastsim-py/Cargo.toml"
include = [
    { format = "sdist", path = "fastsim-core/Cargo.toml" },
    { format = "sdist", path = "fastsim-core/src/*" },
    { format = "sdist", path = "fastsim-py/Cargo.toml" },
    { format = "sdist", path = "fastsim-py/src/*" },
    { format = "sdist", path = "fastsim-core/proc-macros/Cargo.toml" },
    { format = "sdist", path = "fastsim-core/proc-macros/src/*" },
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-64", "osx-arm64", "linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
fastsim = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
cargo_test = "cargo test --release"
py_build = "maturin develop --release"
py_test = { cmd = "pixi run -e dev pytest -v", depends-on = ["py_build"] }
build_and_test = { depends-on = ["cargo_test", "py_test"] }
fmt = "ruff format"
lint = "pylint"
style = { depends-on = ["fmt", "lint"] }

[tool.ruff]
# Specify Python version
target-version = "py311"
# Maximum line length
line-length = 100
# Exclude specific paths
exclude = [
    "site-packages", # Ignore all errors in site-packages
]

[tool.ruff.lint.isort]
known-first-party = ["fastsim"]
section-order = [
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
preview = true
select = [
    "A",   # flake8-builtins
    "ARG", # flake8-unused-arguments
    # "B", # flake8-bugbear
    "C",    # Pylint: Convention
    "C4",   # flake8-comprehensions
    "C90",  # mccabe
    "COM",  # flake8-commas
    "D",    # pydocstyle
    "E",    # Error
    "F",    # Pyflakes
    "G",    # flake8-logging-format
    "I",    # isort
    "LOG",  # flake8-logging
    "N",    # pep8-naming
    "NPY",  # numpy-specific
    "PERF", # Perflint
    # "PL", # Pylint
    "Q",   # flake8-quotes
    "SIM", # flake8-simplify
    # "TID", # flake8-tidy-imports (absolute imports)
    "UP", # pyupgrade
    "W",  # Warning
]
ignore = [
    "D400", # first-line-should-end-with-a-period
    "E266", # Too many leading `#`
    "D205", # blank line after summary
    "N807",
]

# [tool.ruff.lint.pydocstyle]
# convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

# https://mypy.readthedocs.io/en/stable/config_file.html
# https://mypy.readthedocs.io/en/stable/config_file.html#example-pyproject-toml
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
allow_redefinition = true
exclude = [
    # '^file1\.py$',  # TOML literal string (single-quotes, no escaping necessary)
    # "^file2\\.py$",  # TOML basic string (double-quotes, backslash and other characters need escaping)
]

# mypy per-module options:

# [[tool.mypy.overrides]]
# module = "mycode.foo.*"
# disallow_untyped_defs = true

# [[tool.mypy.overrides]]
# module = "mycode.bar"
# warn_return_any = false

[[tool.mypy.overrides]]
module = [
    "pymoo.*",
    "fastsim.*", # TODO: fix fastsim and remove this line
]
ignore_missing_imports = true
