[package]
name = "fastsim-core"
version = "1.0.4"
edition = { workspace = true }
rust-version = { workspace = true }
license = "Apache-2.0"
description = "Core FASTSim models for vehicle energy usage simulation"
exclude = ["build.rs"]
authors = ["NREL/MTES/CIMS/MBAP Group <fastsim@nrel.gov>"]
homepage = "https://www.nrel.gov/transportation/fastsim.html"
readme = "../README.md"
repository = "https://github.com/NREL/fastsim"
documentation = "https://nrel.github.io/fastsim/"

[dependencies]
fastsim-proc-macros = { path = "fastsim-proc-macros", version = "1.0.4" }
fastsim-2 = { workspace = true }
csv = { version = "1.1.6", optional = true }
serde = { version = "1.0.136", features = ["derive"] }
rmp-serde = { version = "1.3.0", optional = true }
serde_yaml = { version = "0.8.23", optional = true }
serde_json = { version = "1.0", optional = true }
uom = { workspace = true }
paste = "1.0.7"
easy-ext = "1.0.0"
rayon = "1.5.3"
document-features = { workspace = true }
anyhow = { workspace = true }
readonly = "0.2.3"
duplicate = "0.4.1"
nohash-hasher = "0.2.0"
eng_fmt = "0.1.2"
pyo3 = { workspace = true, features = [
    "extension-module",
    "anyhow",
], optional = true }
serde-this-or-that = "0.4.2"
project-root = "0.2.2"
include_dir = { version = "0.7.3", optional = true }
itertools = "0.12.0"
lazy_static = { workspace = true }
regex = "1.10.3"
ndarray = { version = "0.16.1", features = ["serde"] }
toml = { version = "0.8.12", optional = true }
derive_more = { version = "1.0.0", features = [
    "from_str",
    "from",
    "is_variant",
    "try_into",
    "display",
] }
ureq = { version = "2.9.1", optional = true }
url = { version = "2.5.0", optional = true }
ninterp = { workspace = true }
approx = "0.5.1"
thiserror = { workspace = true }
typenum = "1.18.0"
num-traits = "0.2.19"

[dev-dependencies]
pretty_assertions = "1.4.1"

[features]
default = ["resources", "serde-default", "simdrivelabel"]
## Enables `pyo3` to provide fastsim-3 structs, methods, and functions to Python
pyo3 = ["dep:pyo3", "fastsim-2/pyo3"]
## Compiles external resources (e.g. vehicle files or cycle files) to be
## available in the binary
resources = ["dep:include_dir"]
## Enables internet-querying dependencies
web = ["dep:ureq", "dep:url"]
## Enables several text file formats for serialization and deserialization
serde-default = ["csv", "json", "toml", "yaml", "msgpack"]
## Enables csv serialization and deserialization
csv = ["dep:csv"]
## Enables json serialization and deserialization
json = ["dep:serde_json"]
## Enables toml serialization and deserialization
toml = ["dep:toml"]
## Enables yaml serialization and deserialization
yaml = ["dep:serde_yaml"]
## Enables message pack serialization and deserialization via `rmp-serde`
msgpack = ["dep:rmp-serde"]

## Enables the simdrivelabel module for calculating EPA label fuel economy
simdrivelabel = []

#! ### Features needed to allow for custom `uom` quantities and units.  These
#! ### have no actual effect.
si = []
f32 = []
cargo-clippy = []

## Activates `timer` macros
timer = []
