[package]
name = "fastsim-proc-macros"
version = "1.0.4"
edition = { workspace = true }
description = "Procedural macros for FASTSim"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.37"
quote = "1.0.18"
regex = "1.6.0"
syn = { version = "2.0.76", features = ["full"] }
uom = { workspace = true }
lazy_static = { workspace = true }

[lib]
proc-macro = true
